force-app/main/default/objects/custom_create93__c/custom_create93__c.object-meta.xml
<CustomObject>
    <label>Custom created object93</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects93</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>