force-app/main/default/objects/custom_create93__c/fields/custom_create_93field535__c.field-meta.xml
<CustomField>
    <fullName>custom_create_93field535__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 93field535</label>
    <type>Checkbox</type>
</CustomField>